--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                 Add your github profile image,
                 first name, basic info (example: Programmer, Developer, Entrepreneur etc.) and 
                 your github profile link -->
+		
+		<div class="card">
+		    <div class="dp">
+			<img src="https://avatars.githubusercontent.com/u/69362399?s=400&u=39de36cfafa101946abb670e6494ebe7e7418b0a&v=4" alt="github-dp">
+		    </div>
+		    <div class="name">Sharon Shajan</div>
+		    <div class="sub">Web Developer</div>
+		    <a class="btn" href="https://github.com/Sharon005" target="_blank">View Profile</a>
+		</div>
 
             <div class="card">
                 <div class="dp">
